opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/email_message"
bug-reports: "https://github.com/janestreet/email_message/issues"
dev-repo: "git+https://github.com/janestreet/email_message.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "email_message" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "core"
  "core_extended"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_driver"
  "ppx_jane"
  "re2"
  "cryptokit"
  "magic-mime"
  "ocaml-migrate-parsetree" {>= "0.4"}
  "ounit"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
E-mail message parser
"
