opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/email_message"
bug-reports: "https://github.com/janestreet/email_message/issues"
dev-repo: "git+https://github.com/janestreet/email_message.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "core"
  "core_extended"
  "core_kernel"
  "ppx_jane"
  "re2"
  "angstrom"
  "cryptokit"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "magic-mime"
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
E-mail message parser
"
